增加到jar包发布到github的功能